[package]
name = "unblock"
version = "0.1.0"
authors = ["Ilya Titkov <ilya@titkov.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.9"
reqwest = { version="0.12", default-features = false, features=["stream", "gzip", "rustls-tls", "http2"] }
tokio = { version="1", features=[
    "macros",
    "net",
    "time",
    "rt-multi-thread",
    "sync",
] }
tokio-stream = "0.1"
serde_json = "1"
serde = { version="1", features=["derive"] }
futures-util = "0.3"
bytes = "1"
nom = "7"
priority-queue = "2"
async-trait = "0.1"
config = { version="0.14", features=["yaml"] }
humantime-serde = "1"
warp = "0.3"
regex = "1"
arc-swap = "1"
once_cell = "1"
prometheus = "0.13"
fure = "0.6"

[dev-dependencies]
pretty_assertions = "1"
quickcheck = "1"
quickcheck_macros = "1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
