[package]
name = "unblock"
version = "0.1.0"
authors = ["Ilya Titkov <ilya@titkov.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "ring", "native-tokio", "tls12", "rustls-native-certs", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
http-body-util = "0.1"
url = "2"
tokio = { version="1", features=[
    "macros",
    "net",
    "time",
    "sync",
    "rt",
    "fs",
    "io-util",
] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
serde_json = "1"
serde = { version="1", features=["derive"] }
futures-util = "0.3"
base64 = "0.22"
bytes = "1"
nom = "8"
priority-queue = "2"
async-trait = "0.1"
config = { version="0.15", features=["yaml"] }
humantime-serde = "1"
regex = "1"
arc-swap = "1"
once_cell = "1"
fure = "0.6"
memmap2 = "0.9"
tempfile = "3"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }

[dev-dependencies]
pretty_assertions = "1"
quickcheck = "1"
quickcheck_macros = "1"
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
